--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+	<div class="imagecontainer">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" alt="image 1">
+	</div>
+	<table>
+		<tr>
+			<td style="Width: 200;"><img src="image2.jpg"></td>
+			<td style="Width: 600;"">Text Content</td>
+			<td style="Width: 200;""><img src="image3.jpg"</td>
+		</tr>
+		<tr>
+			<td style="Width: 200;"><img src="image4.jpg"></td>
+			<td style="Width: 600;"">Text Content</td>
+			<td style="Width: 200;""><img src="image5.jpg"</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
